NOCC 1.4    ?? ??, 200?

  Bugs
    * Bug #1629751 : Deleting mails reports "Could not connect to server" 
      (Arnaud Boudou).

  Patches
    * Patch #1717436 : Show folder select only with more folders (Tim Gerundt).
    * Patch #1712388 : Prevent problems with base_url under windows (Tim
      Gerundt).
    * Patch #1706947 : Hide lang and theme select from login page (Tim Gerundt).
    * Patch #1682496 : Add "Unread" and "Attachment" as own column
      (Tim Gerundt).
    * Patch #1681769 : Use only one sorted arrow (Tim Gerundt).
    * Patch #1674343 : Missing translation for Dutch (openfan).
    * Patch #1663909 : Column order preference (Tim Gerundt).
    * Patch #1659330 : Optimize login box (Part 2) (Tim Gerundt).
    * Patch #1650480 : Use "min-width" for modern browsers (Tim Gerundt).
    * Patch #1650207 : Optimize header and footer (Tim Gerundt).
    * Patch #1649280 : Remove "global" <div> (Tim Gerundt).
    * Patch #1648561 : Remove needless CSS classes (Tim Gerundt).
    * Patch #1648196 : Use <label> for login box (Tim Gerundt).
    * Patch #1639027 : RSS: Add nocc_login as parameter (Tim Gerundt).
    * Patch #1639021 : RSS: Fix array_shift warning (Tim Gerundt).
    * Patch #1632779 : Fix Invalid HTML in html/prefs.php (Tim Gerundt).
    * Patch #1630921 : Optimize login box (Tim Gerundt).
    * Patch #1627141 : CS translation for 1.3 version (Ragimiri).

  RFE
    * RFE #1639527 : Setting for mailbox column order (Tim Gerundt).

  Misc
    * Improve count of unseen messages into status line speed (Dirk Hoeschen).
    * UCB POP server and quota are now per server settings (Arnaud Boudou).
    * Improve "To:" address display in message list (Arnaud Boudou).
    * Disable unread icon for POP3 mailboxes (Arnaud Boudou).
    * Some small CSS changes (Arnaud Boudou).
    * Move "sendButtons" from <TABLE> to <P> for more structured HTML (Tim
      Gerundt).

NOCC 1.3    January 01, 2007

  Bugs