@@ -7,36 +7,9 @@
   color: #FFFFFF;
 }
 
-.new {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-}
-
 .inbox img {
   height: 17px;
   width: 17px;
-}
-
-.new {
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.inboxHeader {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.inboxHeaderSorted {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  text-align: center;
-  background-color: #FEEC85;
-  border: 1px dashed #222222;
 }
 
 .inboxStatus {
@@ -463,6 +436,28 @@ img.sort {
 #loginBox p {
   margin: 0;
   padding: 0.5em;
+}
+
+#inboxTable {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+#inboxTable .new {
+  font-weight: bold;
+}
+
+#inboxTable th.sorted {
+  background-color: #FEEC85;
+  border: 1px dashed #222222;
+}
+
+#inboxTable .column0 {
+  text-align: center;
+}
+
+#inboxTable .column5 {
+  text-align: right;
 }
 
 .send {
